Redid text fields according to new documentation, updated documentation and zip packages, changed main background color

--- a/stylesheets/scss/components/_mixins.scss
+++ b/stylesheets/scss/components/_mixins.scss
@@ -381,3 +381,21 @@
 	-moz-perspective: $setting;
 	perspective: $setting;
 }
+
+@mixin placeholder() {
+	&::-webkit-input-placeholder {
+		@content;
+	}
+
+	&::-moz-placeholder {
+		@content;
+	}
+
+	&:-ms-input-placeholder {
+		@content;
+	}
+
+	&::placeholder {
+		@content;
+	}
+}
