--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -38,7 +38,7 @@
 @import 'components/snackbars'; // Used to style snackbars and toasts (can be turned off)
 @import 'components/steppers'; // Used to style steppers (can be turned off)
 @import 'components/tabs'; // Used to style tabs (can be turned off)
-@import 'components/textfields'; // Used to style input (can be turned off)
+@import 'components/text-fields'; // used to style input (can be turned off)
 @import 'components/tooltips'; // Used to style tooltips (can be turned off)
 @import 'components/colors-create'; // Used to create colors(can be turned off)
 
