--- a/stylesheets/scss/dark-smaterial.scss
+++ b/stylesheets/scss/dark-smaterial.scss
@@ -23,3 +23,4 @@ $theme: dark;
 @import 'components/menu'; // Used to style menus (can be turned off) is used for appbar, navigation drawer dropdown and select
 @import 'components/navigation-drawer'; // Used to style navigation drawer (can be turned off)
 @import 'components/colors-create'; // Used to create colors(can be turned off)
+@import 'components/buttons'; // Used to style buttons (can be turned off)
