--- a/stylesheets/smaterial.css
+++ b/stylesheets/smaterial.css
@@ -2374,10 +2374,10 @@ h1, h2, h3, h4, h5, h6 {
       box-shadow: 0rem 0rem 0.14286rem 0rem rgba(0, 0, 0, 0.14) , 0rem 0.21429rem 0.28571rem 0rem rgba(0, 0, 0, 0.12) , 0rem 0.07143rem 0.35714rem 0rem rgba(0, 0, 0, 0.2); } }
   @media only screen and (orientation: landscape) and (max-width: 960px) {
     .appbar {
-      min-height: 3.42857rem; } }
+      height: 3.42857rem; } }
   @media only screen and (orientation: portrait) and (max-width: 600px) {
     .appbar {
-      min-height: 4rem; } }
+      height: 4rem; } }
   @media only screen and (min-width: 961px) {
     .appbar {
       height: 4.57143rem;
